--- a/src/components/ReposList/ReposList.module.css
+++ b/src/components/ReposList/ReposList.module.css
@@ -2,6 +2,12 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 16px;
+
+    @media(max-width: 768px){
+        grid-template-columns: 1fr;
+        gap: 4px;
+        display: grid;
+    }
 }
 
 .listItem {
